--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,10 +17,10 @@ body {
     font-size: 12px;
 }
 
-.violet { color: #9d426b; }
+.violet { color: #42469D; }
 
 a {
-    color: #9d426b;
+    color: #42469D;
     text-decoration: none;
     -o-transition: all .3s;
     -moz-transition: all .3s;
@@ -78,12 +78,12 @@ strong { font-weight: bold; }
 
 .header ul.nav li.current-page a {
     padding-top: 25px;
-    border-top: 5px solid #9d426b;
+    border-top: 5px solid #42469D;
     background: #f8f8f8;
 }
 
 .header ul.nav li a:hover {
-    background: #9d426b;
+    background: #42469D;
     color: #fff;
 }
 
@@ -266,7 +266,7 @@ strong { font-weight: bold; }
     margin-top: 40px;
     padding-bottom: 20px;
     background: #f8f8f8;
-    border-bottom: 2px solid #9d426b;
+    border-bottom: 2px solid #42469D;
 }
 
 .portfolio .work:hover img {
@@ -297,7 +297,7 @@ strong { font-weight: bold; }
 .portfolio .work .icon-awesome a {
     display: inline-block;
     padding: 5px 9px;
-    background: #9d426b; 
+    background: #42469D; 
     color: #fff;
     -moz-border-radius: 19px;
     -webkit-border-radius: 19px;
@@ -971,9 +971,9 @@ ul.portfolio-img li {
 }
 
 .filter-portfolio a { color: #5d5d5d; text-decoration: none; }
-.filter-portfolio a:hover { color: #9d426b; text-decoration: none; }
+.filter-portfolio a:hover { color: #42469D; text-decoration: none; }
 
-.filter-portfolio a#active-imgs { color: #9d426b; }
+.filter-portfolio a#active-imgs { color: #42469D; }
 .filter-portfolio a#active-imgs:hover { color: #5d5d5d; }
 
 
