changed social media icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,7 +512,7 @@ footer .social {
 
 footer .social a { display: inline-block; width: 24px; height: 24px; margin: 0 0 0 8px; vertical-align: middle; }
 
-footer .social a.twitter { background: url(../img/social-icons/twitter.png) left bottom no-repeat; }
+footer .social a.instagram { background: url(../img/social-icons/instagram.png) left bottom no-repeat; }
 footer .social a.dribbble { background: url(../img/social-icons/dribbble.png) left bottom no-repeat; }
 footer .social a.rss { background: url(../img/social-icons/rss.png) left bottom no-repeat; }
 footer .social a.pinterest { background: url(../img/social-icons/pinterest.png) left bottom no-repeat; }
